crates/rome_js_formatter/tests/specs/prettier/typescript/class/methods.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class X {
    optionalMethod?() {}
}

interface Iterable<T> {
  export [Symbol.iterator](): Iterator<T>;
}

export class Check {
  private static property = 'test';
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -3,7 +3,8 @@
 }
 
 interface Iterable<T> {
-  export [Symbol.iterator](): Iterator<T>;
+  export;
+  [Symbol.iterator](): Iterator<T>;
 }
 
 export class Check {
```

# Output

```js
class X {
  optionalMethod?() {}
}

interface Iterable<T> {
  export;
  [Symbol.iterator](): Iterator<T>;
}

export class Check {
  private static property = "test";
}
```


# Errors
```
error[SyntaxError]: ';' expected'
  ┌─ methods.ts:6:10
  │
6 │   export [Symbol.iterator](): Iterator<T>;
  │          ^ An explicit or implicit semicolon is expected here...


```


